--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,6 +4,7 @@ body {
     padding: 0;
 }
 
+
 header{
     background-color: #0d47a1;
     color: white;    
@@ -11,4 +12,9 @@ header{
 
 header a {
     color: white;
+}
+
+footer{
+    background-color: #bbdefb;
+    color: white;    
 }
