--- a/static/css/style.css
+++ b/static/css/style.css
@@ -45,9 +45,16 @@ main {
 #banner {
     background-color: #0055a4; 
     color: #fff;
-    padding: 100px 0;
+    padding: 30px 0 0 0;
     text-align: center;
 }
+
+#banner video {
+    width: 100%;
+    height: 300px; /* Establece una altura fija */
+    object-fit: cover; /* Ajusta el video sin mantener la proporción */
+}
+
 
 #search {
     background-color: #0077cc; 
