--- a/static/css/style.css
+++ b/static/css/style.css
@@ -7,14 +7,16 @@
 
 /* Estilos generales */
 body {
-    font-family: Arial, sans-serif;
+    font-family: "Bebas Neue", sans-serif;
+    font-weight: 400;
+    font-style: normal;
     background-color: #f7f7f7;
     color: #333;
 }
 
 header {
     background-color: #0055a4; 
-    color: #fff;
+    color: #ffffff;
     padding: 10px 0;
     text-align: center;
 }
@@ -34,8 +36,11 @@ nav ul li {
 }
 
 nav ul li a {
-    color: #fff;
+    color: #ffffff;
     text-decoration: none;
+}
+nav a:hover{
+    color: #000000;
 }
 
 main {
@@ -69,7 +74,6 @@ footer {
     color: #fff;
     padding: 20px;
     text-align: center;
-    position: fixed;
     bottom: 0;
     width: 100%;
 }
@@ -78,4 +82,8 @@ footer a {
     color: #fff;
     text-decoration: none;
     margin: 0 10px;
+    
+}
+footer a:hover {
+    color: #000000;
 }
