--- a/static/css/style.css
+++ b/static/css/style.css
@@ -135,3 +135,7 @@ input[type="text"] {
     color: #999; /* Cambia el color del texto del marcador de posición */
   }
   
+  .responsive-video {
+    width: 100%;
+    height: 500px;
+  }
